--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "@reduxjs/toolkit": "^2.2.5",
     "expo": "~51.0.14",
     "expo-font": "~12.0.7",
+    "expo-linking": "~6.3.1",
     "expo-localization": "~15.0.3",
     "expo-status-bar": "~1.12.1",
     "i18next": "^23.11.5",
@@ -19,11 +23,15 @@
     "react": "18.2.0",
     "react-i18next": "^14.1.2",
     "react-native": "0.74.2",
-    "react-native-encrypted-storage": "^4.0.3"
+    "react-native-encrypted-storage": "^4.0.3",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-redux": "^7.1.33",
     "typescript": "^5.1.3"
   },
   "private": true
