--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.5",
@@ -24,6 +25,7 @@
     "react-i18next": "^14.1.2",
     "react-native": "0.74.2",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-fbsdk-next": "^13.0.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-redux": "^9.1.2"
