--- a/app.json
+++ b/app.json
@@ -1,68 +1,49 @@
 {
-  "expo": {
-    "name": "expo-template",
-    "slug": "expo-template",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "ios": {
-      "supportsTablet": true,
-      "infoPlist": {
-        "SKAdNetworkItems": [
-          {
-            "SKAdNetworkIdentifier": "v9wttpbfk9.skadnetwork"
-          },
-          {
-            "SKAdNetworkIdentifier": "n38lu8286q.skadnetwork"
-          }
-        ]
-      }
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+    "expo": {
+      "name": "expo-template",
+      "slug": "expo-template",
+      "version": "1.0.0",
+      "orientation": "portrait",
+      "icon": "./assets/icon.png",
+      "userInterfaceStyle": "light",
+      "splash": {
+        "image": "./assets/splash.png",
+        "resizeMode": "contain",
         "backgroundColor": "#ffffff"
       },
-      "permissions": [
-        "android.permission.INTERNET"
-      ],
-      "package": "com.anonymous.expotemplate"
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "plugins": [
-      "expo-localization",
-      [
-        "expo-font",
-        {
-          "fonts": [
-            "./assets/fonts/Poppins-Bold.ttf",
-            "./assets/fonts/Poppins-ExtraBold.ttf",
-            "./assets/fonts/Poppins-Italic.ttf",
-            "./assets/fonts/Poppins-Light.ttf",
-            "./assets/fonts/Poppins-Medium.ttf",
-            "./assets/fonts/Poppins-Regular.ttf",
-            "./assets/fonts/Poppins-SemiBold.ttf",
-            "./assets/fonts/Poppins-Thin.ttf"
-          ]
-        }
-      ],
-      [
-        "react-native-fbsdk-next",
-        {
-          "appID": "48127127xxxxxxxx",
-          "clientToken": "c5078631e4065b60d7544a95xxxxxxxx",
-          "displayName": "RN SDK Demo",
-          "scheme": "fb48127127xxxxxxxx"
-        }
+      "ios": {
+        "supportsTablet": true
+      },
+      "android": {
+        "adaptiveIcon": {
+          "foregroundImage": "./assets/adaptive-icon.png",
+          "backgroundColor": "#ffffff"
+        },
+        "permissions": [
+          "android.permission.INTERNET"
+        ]
+      },
+      "web": {
+        "favicon": "./assets/favicon.png"
+      },
+      "plugins": [
+        "expo-localization",
+        [
+          "expo-font",
+          {
+            "fonts": [
+              "./assets/fonts/Poppins-Bold.ttf",
+              "./assets/fonts/Poppins-ExtraBold.ttf",
+              "./assets/fonts/Poppins-Italic.ttf",
+              "./assets/fonts/Poppins-Light.ttf",
+              "./assets/fonts/Poppins-Medium.ttf",
+              "./assets/fonts/Poppins-Regular.ttf",
+              "./assets/fonts/Poppins-SemiBold.ttf",
+              "./assets/fonts/Poppins-Thin.ttf"
+            ]
+          }
+        ]
       ]
-    ]
+    }
   }
-}
+  
